# classlimit

./: README.md  com.tomasps.classlimit.json  meson.build
data/: com.tomasps.classlimit.desktop.in  com.tomasps.classlimit.gschema.xml  com.tomasps.classlimit.metainfo.xml.in  com.tomasps.classlimit.service.in  gschemas.compiled  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: classlimit-application.c  classlimit-application.h  classlimit-window.c  classlimit-window.h  classlimit-window.ui  classlimit.gresource.xml  main.c  meson.build  onboarding-dialog.ui  style.css
